third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_parens_around_name.move
module 0x123::M {
    fun foo() {
        (foo)()
    }
}
